# CADS-desktop

./: .gitignore  README.md  database.py  main.py  pyproject.toml  styles.qss
controllers/: admin_controller.py
ui/: main_window.ui  page_accountants.ui  page_clients.ui  page_login.ui  page_signup.ui
views/: auth_pages.py  main_window.py  page_accountants.py  page_clients.py
