[project]
name = "cads-desktop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0",
    "designer>=0.6.6",
    "peewee>=3.18.3",
    "psycopg2-binary>=2.9.11",
    "pyqt6-tools>=6.4.2.3.3",
    "setuptools>=80.9.0",
]
